--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -39,5 +39,27 @@
         line-height: 29px;
         text-transform: uppercase;
         color: #fff;
-    }
+    }    
+}
+
+.animation-enter {
+    opacity: 0;
+}
+.animation-enter-active {
+    opacity: 1;
+    visibility: visible;
+    transition: all 1000ms;
+}
+.animation-enter-done {
+    opacity: 1;
+    visibility: visible;
+    transition: all 1000ms;
+}
+.animation-exit {
+    opacity: 1;
+}
+.animation-exit-active {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 1000ms;
 }
