--- a/src/components/pages/singleItemPage.scss
+++ b/src/components/pages/singleItemPage.scss
@@ -10,6 +10,10 @@
         width: 293px;
         height: 450px;
     }
+    &__charimg {
+        width: 293px;
+        height: 293px;
+    }
     &__name {
         font-weight: bold;
         font-size: 22px;
